third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/integer/trailing-us-oct.stderr
TOML parse error at line 1, column 23
  |
1 | trailing-us-oct = 0o1_
  |                       ^
invalid octal integer
expected digit
